--- a/ecommerce frontend/package.json
+++ b/ecommerce frontend/package.json
@@ -23,6 +23,7 @@
     "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "react-slick": "^0.29.0",
