--- a/ecommerce frontend/package.json
+++ b/ecommerce frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-icons": "^5.0.1",
+    "react-icons-kit": "^2.0.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "react-slick": "^0.29.0",
